# wav-monitoring

./: .gitignore  README.md  pyproject.toml
scripts/: common.ps1  install.ps1  make-sample.ps1  run-cli.ps1  run-gui.ps1  run-mock-test.ps1
tools/: make_sample_wav.py
wer_tester/: cli.py  display.py  gui.py  mock_provider.py  models.py  provider.py  receiver.py  sender.py  utils.py
